Fix suggestions wrap.

--- a/app/styles/space/detail.css
+++ b/app/styles/space/detail.css
@@ -196,6 +196,7 @@ button.space-detail-counter {
   width: 100%;
   display: flex;
   max-width: 1024px;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
